--- a/k8s/05-ingress.yaml
+++ b/k8s/05-ingress.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: wisecow-ingress
+  namespace: wisecow
   annotations:
     cert-manager.io/cluster-issuer: "selfsigned-issuer"
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
@@ -9,11 +10,10 @@ spec:
   ingressClassName: nginx
   tls:
   - hosts:
-    - localhost.nip.io
-    - localhost
+    - //aws_loadbalancer
     secretName: wisecow-tls
   rules:
-  - host: localhost.nip.io
+  - host: //aws_load_balancer
     http:
       paths:
       - path: /
@@ -23,13 +23,4 @@ spec:
             name: wisecow-service
             port:
               number: 80
-  - host: localhost
-    http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: wisecow-service
-            port:
-              number: 80
+~
