--- a/k8s/05-ingress.yaml
+++ b/k8s/05-ingress.yaml
@@ -10,10 +10,10 @@ spec:
   ingressClassName: nginx
   tls:
   - hosts:
-    - //aws_loadbalancer
+    - a24a963e5a0f34ffc9b255609a14c5e0-b53a9b331bab26d1.elb.us-east-1.amazonaws.com
     secretName: wisecow-tls
   rules:
-  - host: //aws_load_balancer
+  - host: a24a963e5a0f34ffc9b255609a14c5e0-b53a9b331bab26d1.elb.us-east-1.amazonaws.com
     http:
       paths:
       - path: /
